--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-05-26  Timothy Lee
+	* md5.c: Fix padding for multiples of 64 bytes
+	* tst-md5.c: Test coverage for fixed bug
+
 2009-07-22  Gurer
 	* io-posix.c: send/recv now handles EAGAIN/EINTR.
 
