Fix CDATA parsing bug
git-svn-id: https://iksemel.googlecode.com/svn/trunk@30 6ddeccfd-2234-0410-8ab0-45b763562eda

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2015-05-26  Timothy Lee
+	* sax.c: Fix handling of ending ]] sequences in CDATA sections
+	  bug report and patch by oscarvdbosch
+	* tst-sax.c: Test coverage for fixed bug
 	* md5.c: Fix padding for multiples of 64 bytes
 	* tst-md5.c: Test coverage for fixed bug
 
