Return nul terminated strings from iks_string() for cdata nodes
git-svn-id: https://iksemel.googlecode.com/svn/trunk@35 6ddeccfd-2234-0410-8ab0-45b763562eda

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2015-05-26  Timothy Lee
+	* iks.c: iks_string() returns nul terminated strings for cdata nodes
 	* sax.c: Fix handling of ending ]] sequences in CDATA sections
 	  bug report and patch by oscarvdbosch
 	* tst-sax.c: Test coverage for fixed bug
